syntax = "proto3";

package switcheo.switcheo;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "switcheo/switcheo/params.proto";
import "switcheo/switcheo/item.proto";

option go_package = "switcheo/x/switcheo/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/switcheo/switcheo/params";
  
  }
  
  // Queries a list of Item items.
  rpc Item    (QueryGetItemRequest) returns (QueryGetItemResponse) {
    option (google.api.http).get = "/switcheo/switcheo/item/{id}";
  
  }
  rpc ItemAll (QueryAllItemRequest) returns (QueryAllItemResponse) {
    option (google.api.http).get = "/switcheo/switcheo/item";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetItemRequest {
  uint64 id = 1;
}

message QueryGetItemResponse {
  Item Item = 1 [(gogoproto.nullable) = false];
}

message QueryAllItemRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllItemResponse {
  repeated Item                                   Item       = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

